Adicionado imagem de navio

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <body>
     <h1>Atividade Prática Integradora Desenvolvimento de Apps</h1>
     <p>Utilizando o Git e GitHub</p>
+    <div style="display: flex; flex-direction: column; margin: 10px 0px 50px 0px">
+      <img style="width: 500px" src="./images/Navio.jpeg" alt="Imagem de um Navio com o por do sol atrás" />
+      <q>Navio entre o canal de Santos e Guarujá</q>
+    </div>
   </body>
 </html>
